Fix margin-top and alignment on a few things

--- a/styles.scss
+++ b/styles.scss
@@ -18,11 +18,12 @@ h2, p {
     display: grid;
     grid-gap: 3em;
     max-width: 1000px;
-    margin: 3em auto;
+    margin: auto;
     align-items: center;
     
     @media (min-width: 1200px) {
         grid-template-columns: 1fr 1fr;
+        margin-top: 3em;
     }
 
 }
